--- a/heroku.yml
+++ b/heroku.yml
@@ -1,9 +1,3 @@
-setup:
-  addons:
-    - plan: heroku-postgresql
-      as: db
 build:
   docker:
-    web: Dockerfile
-run:
-  web: bash start.sh
+    worker: Dockerfile
