--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "vhhgvh1u",
-  "description": "Wkjhhhhbu",
+  "name": "vhjsjsjjsjsjsnshgvh1u",
+  "description": "Wkjnsnznznxnnhhhhbu",
   "keywords": [
     "hhtam",
     "ohhhn",
@@ -11,18 +11,18 @@
     "dyhhhjer"
   ],
   "env": {
-    "OTvvvhhHER_IS": {
-      "description": "If you ge",
+    "OTvvhbbbbvhhHER_IS": {
+      "description": "If youbdbdbdbd ge",
       "value": "None",
       "required": false
     },
     "ZAhhhbhbTH": {
-      "description": "Enter the githuv pass",
-      "value": "https://github.com/lomda",
+      "description": "Enternznzbznb the githuv pass",
+      "value": "https://githubsbsbsbsnsbsnb.com/lomda",
       "required": false
     },
     "PYTHON_FILE": {
-      "description": "Name of the python file that you need to run [use -m if you need to run __main__.py from a folder]",
+      "description": "Name of the psjnsndython file that you need to run [use -m if you need to run __main__.py from a folder]",
       "value": "main.py",
       "required": false
     },
